--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -37,7 +37,7 @@
       </ion-label>
       <ion-select [(ngModel)]="profile.age" (ionChange)="saveProfile()">
         <ion-option *ngFor="let option of ageOptions"
-          value="{{option.value}}">{{option.label}}</ion-option>
+          [value]="option.value">{{option.label}}</ion-option>
       </ion-select>
     </ion-item>
     <ion-item>
@@ -47,7 +47,7 @@
       </ion-label>
       <ion-select [(ngModel)]="profile.gender" (ionChange)="saveProfile()">
         <ion-option *ngFor="let option of genderOptions"
-          value="{{option.value}}">{{option.label}}</ion-option>
+          [value]="option.value">{{option.label}}</ion-option>
       </ion-select>
     </ion-item>
     <ion-item>
@@ -58,7 +58,7 @@
       <ion-select [(ngModel)]="profile.cyclingExperience"
           (ionChange)="saveProfile()">
         <ion-option *ngFor="let option of experienceOptions"
-          value="{{option.value}}">{{option.label}}</ion-option>
+          [value]="option.value">{{option.label}}</ion-option>
       </ion-select>
     </ion-item>
   </ion-list>
