Initial work on tutorial slideshow.

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -70,6 +70,10 @@
       <ion-icon name="appstore" item-left></ion-icon>
       Version: {{version}}
     </ion-item>
+    <button ion-item icon-left (click)="openTutorial()">
+      <ion-icon name="help-circle" item-left></ion-icon>
+      Help
+    </button>
     <button ion-item icon-left (click)="openTerms()">
       <ion-icon name="information-circle" item-left></ion-icon>
       User Agreement
