Initial work on styling slides.

--- a/src/pages/tutorial/tutorial.html
+++ b/src/pages/tutorial/tutorial.html
@@ -8,7 +8,7 @@
 
 <ion-content>
   <ion-slides pager>
-    <ion-slide>
+    <ion-slide padding class="slide-welcome">
       <h1>
         Welcome to BikeMoves!
       </h1>
@@ -18,7 +18,7 @@
         about the bicycle network.
       </p>
     </ion-slide>
-    <ion-slide>
+    <ion-slide padding class="slide-map">
       <h1>
         Explore the Map
       </h1>
@@ -31,22 +31,22 @@
         potholes or tree limbs blocking a bike lane to local officials.
       </p>
     </ion-slide>
-    <ion-slide>
+    <ion-slide padding class="slide-record">
       <h1>
         Record a Trip
       </h1>
       <p>
-        With automatic recording (enabled by default), BikeMoves will
-        automatically start and stop trips based on the movement of your
-        phone.* Just open the app, jump on your bike, and go!
+        With automatic recording, BikeMoves will automatically start and stop
+        trips based on the movement of your phone. Just open the app,
+        jump on your bike, and go!
       </p>
-      <p class="small">
-        * Automatic recording waits three minutes after you stop biking
+      <p>
+        Automatic recording waits three minutes after you stop biking
         to make sure the trip is over. Tap the <strong>Stop</strong> button
         to skip the three minute delay and save the trip.
       </p>
     </ion-slide>
-    <ion-slide>
+    <ion-slide padding class="slide-upload">
       <h1>
         Upload Trips
       </h1>
@@ -60,7 +60,7 @@
         made public.
       </p>
     </ion-slide>
-    <ion-slide>
+    <ion-slide padding class="slide-stats">
       <h1>
         Track Your Riding
       </h1>
@@ -71,7 +71,7 @@
         or year.
       </p>
     </ion-slide>
-    <ion-slide>
+    <ion-slide padding class="slide-settings">
       <h1>
         Change Settings
       </h1>
@@ -86,7 +86,7 @@
         <strong>Help</strong> on the <strong>Settings</strong> tab.
       </p>
     </ion-slide>
-    <ion-slide>
+    <ion-slide padding class="slide-conclusion">
       <h1>
         Happy Riding!
       </h1>
