Position slides fixed.

--- a/src/pages/tutorial/tutorial.html
+++ b/src/pages/tutorial/tutorial.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-slides pager>
+  <ion-slides pager ion-fixed>
     <ion-slide padding class="slide-welcome">
       <h1>
         Welcome to BikeMoves!
