Added dismiss action.

--- a/src/pages/tutorial/tutorial.html
+++ b/src/pages/tutorial/tutorial.html
@@ -90,7 +90,7 @@
       <h1>
         Happy Riding!
       </h1>
-      <button ion-button full>Get Started</button>
+      <button ion-button full (click)="dismiss()">Get Started</button>
     </ion-slide>
   </ion-slides>
 <ion-content>
