--- a/src/pages/trips/trips.html
+++ b/src/pages/trips/trips.html
@@ -3,11 +3,18 @@
     <ion-title>
       Trips
     </ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only *ngIf="listView !== null"
+          (click)="showOptions()">
+        <ion-icon name="more"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
-<ion-content class="cards-background">
-  <ion-grid *ngIf="hasTrips === false" class="row row-center no-content no-trips">
+<ion-content class="{{(listView) ? 'list' : 'cards'}}-background">
+  <ion-grid *ngIf="hasTrips === false"
+      class="row row-center no-content no-trips">
     <ion-row>
       <ion-col col-12>
         <ion-icon name="pin" class="icon-large"></ion-icon>
@@ -19,7 +26,7 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-  <ion-grid *ngIf="hasTrips">
+  <ion-grid *ngIf="hasTrips && listView === false">
     <ion-row *ngFor="let row of trips | group:2">
       <ion-col col-12 col-sm *ngFor="let trip of row">
         <ion-card>
@@ -63,5 +70,39 @@
       <ion-col col-12 col-sm *ngIf="row.length === 1"></ion-col>
     </ion-row>
   </ion-grid>
+  <ion-list *ngIf="hasTrips && listView">
+    <ion-item-sliding *ngFor="let trip of trips" class="trip-{{(trip.submitted) ? 'submitted' : 'not-submitted'}}">
+      <ion-item>
+        <ion-thumbnail item-left>
+          <img src="{{(trip.imageUrl) ? trip.imageUrl : 'assets/img/map-image-placeholder.svg'}}"
+            (click)="goToTripDetail(trip)">
+        </ion-thumbnail>
+        <h2>{{trip.startTime.calendar(null, {sameElse: 'MMMM D, YYYY [at] h:mm A'})}}</h2>
+        <ion-grid no-padding class="trip-summary">
+          <ion-row>
+            <ion-col col-6 col-sm><span class="summary-item time"><ion-icon name="stopwatch"></ion-icon><span class="summary-value">{{trip.stats.formatDuration()}}</span></span></ion-col>
+            <ion-col col-6 col-sm><span class="summary-item distance"><ion-icon name="pin"></ion-icon><span class="summary-value">{{trip.stats.formatDistance()}} mi</span></span></ion-col>
+            <ion-col col-12 col-sm *ngIf="trip.origin > 0 || trip.destination > 0"><span class="summary-item origin"><ion-icon name="bicycle"></ion-icon><span class="summary-value">{{trip.formatOrigin()}} <ion-icon name="arrow-forward"></ion-icon> {{trip.formatDestination()}}</span></span></ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+      <ion-item-options side="right">
+        <button ion-button color="danger"
+            *ngIf="!trip.submitted" (click)="showTripForm(trip)">
+          <ion-icon name="cloud-upload"></ion-icon>
+          Upload
+        </button>
+        <button ion-button (click)="goToTripDetail(trip)">
+          <ion-icon name="information-circle"></ion-icon>
+          Details
+        </button>
+        <button ion-button color="dark" (click)="confirmDelete(trip)">
+          <ion-icon name="trash"></ion-icon>
+          Delete
+        </button>
+      </ion-item-options>
+
+    </ion-item-sliding>
+  </ion-list>
   <div id="trip-image-map"></div>
 </ion-content>
