Generate trip image URLs on demand.

--- a/src/pages/trip-form/trip-form.html
+++ b/src/pages/trip-form/trip-form.html
@@ -45,5 +45,5 @@
       </ion-item>
     </ion-item-group>
   </ion-list>
-  <img *ngIf="trip.imageUrl" src="{{trip.imageUrl}}" alt="An image of the trip">
+  <img *ngIf="imageURL" [src]="imageURL" alt="An image of the trip">
 </ion-content>
