Implemented logging and e-mail send.

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -68,7 +68,7 @@
     </ion-item-divider>
     <button ion-item icon-left (click)="openLog()">
       <ion-icon name="bug" item-left></ion-icon>
-      View Logs
+      Logs
     </button>
   </ion-list>
   <ion-list>
